--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch 'src/' --exec 'ts-node src/infra/api/express.ts' -e ts",
+    "express": "nodemon --watch --exec ./dist/infra/api/express.js",
     "test": "tsc && jest ./dist",
     "build": "tsc"
   },
@@ -13,7 +14,12 @@
   "dependencies": {
     "@types/node": "^20.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pg": "^8.11.2",
+    "pg-promise": "^11.5.3",
+    "sqlite3": "^5.1.6",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "uuidv4": "^6.2.13"
   }
